--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pqpmath3ws.github.io",
   "version": "0.0.1",
-  "private": true,
+  "homepage": "/",
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
