--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pqpmath3ws.github.io",
   "version": "0.0.1",
-  "homepage": "/",
+  "homepage": "https://pqpmath3ws.github.io/",
   "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
