--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pqpmath3ws.github.io",
   "version": "0.0.1",
-  "homepage": "https://pqpmath3ws.github.io/",
+  "homepage": "https://pqpmath3ws.github.io",
   "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -21,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
