--- a/.github/workflows/build_react_app.yml
+++ b/.github/workflows/build_react_app.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Building web-app
         run: |
           npm ci
-          npm run deploy
+          npm run build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
