--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
